css : overflow fix for aligner stats

--- a/browser/css/aligner.less
+++ b/browser/css/aligner.less
@@ -21,6 +21,8 @@
     float: right;
     width: @width_stats - 3px;
     padding: 2px 5px;
+    overflow: hidden;
+    height: 16px;
   }
 
 .list_select{
